cabal-version:       >=1.10
name:                safe-tidal-cli
version:             0.1.0
synopsis:  restricted interpreter for tidalcycles
license:        GPL-3
author:              Johannes Waldmann
maintainer:          @
build-type:          Simple

executable safe-tidal-cli
  main-is: Main.hs
  build-depends: base, tidal,
                 hint, haskell-src-exts, exceptions
  default-language:    Haskell2010
